# Algo1-TP

./: .gitignore  Algo1-TP.cabal  README.md  Tests.hs  cmds.txt  iap1-tp.hs  test-catedra.hs
docs/: how_to_git.md
tests/: testExamples.hs  tests.hs
