cabal-version:      2.4
name:               Algo1-TP
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Facundo Lerena
maintainer:         faculerena@gmail.com

-- A copyright notice.
-- copyright:
-- category:

executable Solution
  main-is:             iap1-tp.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base, Cabal
  -- hs-source-dirs:      
  default-language:    Haskell2010

Test-Suite SolutionTest
  type:                exitcode-stdio-1.0
  main-is:             test-catedra.hs
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit
  default-language:    Haskell2010